--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,12 @@ spring:
     username: test
     password: 123456
 
+mybatis:
+  #实体类所做包
+  type-aliases-package: com.oscroll.domain
+  #mapper.xml所在位置
+  mapper-locations: classpath:mapper/*.xml
+
 management:
   server:
     port: 10212
