--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,8 @@ mybatis:
   type-aliases-package: com.oscroll.domain
   #mapper.xml所在位置
   mapper-locations: classpath:mapper/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
 
 management:
   server:
