--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,16 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.8.13</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.56</version>
+        </dependency>
     </dependencies>
 
     <build>
